# YOU

./: .gitignore  AGENTS.md  Calendar.md  Current Notes.md  LICENSE  Open Questions.md  Profile.md  README.md  RECOVERY_NOTES.md  Recent Reflections.md  SCHEMA.md  SKILL.md  STRUCTURE.md  YOU.md  YOU_agent.md  index.md  log.md  pyproject.toml  setup
Emerging/: README.md
Life Interaction/: + Life Interactions.md
Main Life Categories/Achievements/: Academic_Achievements.md  Achievements.md  Achievements_Overview.md  Personal_Achievements.md  Professional_Achievements.md  Skill_Based_Achievements.md
Main Life Categories/Anxiety and Fears/: Anxiety_Fears.md
Main Life Categories/Budgeting and Saving/: Budgeting_Saving.md  Effective_Budgeting.md
Main Life Categories/Career Progression/: Career_Progression__Overview.md
Main Life Categories/Challenges & Setbacks/: Challenges_Setbacks.md  Overcoming_Obstacles.md
Main Life Categories/Community Engagement/: Community_Engagement.md  Volunteering.md
Main Life Categories/Coping Strategies/: Coping_Strategies.md  (+1 more)
System/: AWARENESS.md  CATEGORY_RULES.md  CATEGORY_STATE.json  CONSENT.md  CONTRADICTIONS.md  EXTRACTION_SCHEMA.json  FOCUS.md  MEMORY_POLICY.md  OBSIDIAN_DASHBOARD.md  OPEN_LOOPS.md  PATTERNS.md  PRIVACY.md  RECALL_INDEX.md  REVIEW_QUEUE.md  TAXONOMY.md  config.json  open_loops.json  recall_index.json
Visible/: README.md
docs/: index.html  you-canvas.js
launchd/: com.you-memory.agent.plist
templates/: TEMPLATE.md  TEMPLATE_SUBTOPIC.md
tests/: test_core.py  test_files.py  test_runtime_skeleton.py
(+164 files in other folders)
