[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "you-memory"
version = "0.1.0"
description = "Local-first long-term memory runtime for YOU vault"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
you-runtime = "you.cli:main"
